tests/ui/traits/negative-impls/no-items.stderr
error[E0749]: negative impls cannot have any items
  --> $DIR/no-items.rs:8:5
   |
LL |     type Foo = i32;
   |     ^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0749`.
